--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-pdf": "^7.3.3",
     "react-scripts": "5.0.1",
     "react95": "^4.0.0",
     "styled-components": "^6.0.7",
