--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-draggable": "^4.4.5",
     "react-pdf": "^7.3.3",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.2",
     "react95": "^4.0.0",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4"
