--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.2",
     "react95": "^4.0.0",
+    "remixicon-react": "^1.0.0",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4"
   },
